<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgreen"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:text="@string/loading"
        android:gravity="center_horizontal"
        />
    <ImageView
        android:id="@+id/image_background"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@mipmap/def_loading"
        android:scaleType="centerCrop"
        android:layout_below="@id/text_name"
        />

    <TextView
        android:id="@+id/text_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:layout_below="@id/image_background"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:background="@color/lightgreen"
        android:layout_below="@id/text_information"
        android:layout_marginLeft="20dp"
        />
    <TextView
        android:id="@+id/text_overtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/over_time"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="#000000"
        android:alpha="0.5"
        android:padding="10dp"
        android:layout_above="@id/text_information"
        />
    <TextView
        android:id="@+id/text_last_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="#000000"
        android:alpha="0.5"
        android:padding="10dp"
        android:layout_toRightOf="@id/text_overtime"
        android:layout_above="@id/text_information"
        android:gravity="right"
        />
    <TextView
        android:id="@+id/text_explains"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:layout_below="@id/text_information"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/text_howtoget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to_get"
        android:layout_below="@id/text_explains"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:background="@color/lightgreen"
        android:layout_below="@id/text_howtoget"
        android:layout_marginLeft="20dp"
        />
    <TextView
        android:id="@+id/text_descs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:layout_below="@id/text_howtoget"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        />
    <Button
        android:id="@+id/btn_getgift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgreen"
        android:text="@string/btn_get_gift"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:onClick="onClickGetGift"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lightgreen"
        android:layout_above="@id/btn_getgift"
        android:layout_marginBottom="5dp"/>
</RelativeLayout>