<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_head"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/def_loading"
        android:layout_margin="20dp"
        />
    <TextView
        android:id="@+id/text_gname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/image_head"
        />
    <TextView
        android:id="@+id/text_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="20sp"
        android:layout_below="@id/text_gname"
        android:layout_toRightOf="@id/image_head"
        android:layout_marginTop="15dp"

        />
    <TextView
        android:id="@+id/text_type_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textSize="20sp"
        android:layout_toRightOf="@id/text_type"
        android:layout_below="@id/text_gname"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textSize="20sp"
        android:layout_below="@id/text_type"
        android:layout_toRightOf="@id/image_head"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/text_size_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textSize="20sp"
        android:layout_toRightOf="@id/text_size"
        android:layout_below="@id/text_type"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/text_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/people"
        android:textSize="20sp"
        android:textColor="@color/lightgrey"
        android:layout_alignParentRight="true"
        android:layout_below="@id/text_gname"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/text_people_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:layout_toLeftOf="@id/text_people"
        android:layout_below="@id/text_gname"
        android:layout_marginTop="15dp"
        />
</RelativeLayout>