<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:descendantFocusability= "blocksDescendants">

    <ImageView
        android:id="@+id/image_head"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        android:layout_margin="15dp"
        />
    <TextView
        android:id="@+id/text_gname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/image_head"
        />
    <TextView
        android:id="@+id/text_giftname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textSize="20sp"
        android:layout_below="@id/text_gname"
        android:layout_toRightOf="@id/image_head"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/text_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:layout_below="@id/text_giftname"
        android:layout_toRightOf="@id/image_head"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/lightgreen"
        android:layout_below="@id/text_giftname"
        android:layout_toRightOf="@id/text_last"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_below="@id/text_giftname"
        android:layout_toRightOf="@id/text_number"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/text_addtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:layout_below="@id/text_giftname"
        android:layout_toRightOf="@id/text_time"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/btn_getgift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@color/lightgreen"
        android:text="@string/btn_get_gift"
        android:textColor="@color/white"
        android:focusable = "false" />
</RelativeLayout>