<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title_hot"
        android:text="@string/hot_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/lightgreen"
        android:gravity="center"
        android:textSize="25sp"
        android:padding="10dp"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/title_bar_menu"
        style="?android:attr/borderlessButtonStyle"
        />
    <TextView
        android:id="@+id/nice"
        android:layout_below="@id/title_hot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hot_text_nice"
        android:background="@color/backgray"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"/>
    <ListView
        android:layout_below="@id/nice"
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/grey"
        android:background="@color/white"
        android:dividerHeight="1dp"
        />
    <TextView
        android:id="@+id/hot"
        android:layout_below="@id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hot_text_hot"
        android:background="@color/backgray"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"/>
    <GridView
        android:layout_below="@id/hot"
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="3"
        android:columnWidth="100dp"
        android:stretchMode="columnWidth"
        android:horizontalSpacing="3dp"
        android:verticalSpacing="3dp"
        />
</RelativeLayout>